--- a/_includes/templates/header-external-site.html
+++ b/_includes/templates/header-external-site.html
@@ -1,14 +1,7 @@
 <header class="header
                wrapper
-               wrapper__match-content
-               primary-nav_header-space"
+               wrapper__match-content"
         role="banner">
-
-    <button class="sliding-nav_trigger" id="trigger">
-        <span class="cf-icon cf-icon-menu"></span>
-        <span class="u-visually-hidden">Menu</span>
-    </button>
-
     <a href="/">
         <img class="header_logo u-js-only"
              src="/static/img/logo_sm-exec.svg"
@@ -24,14 +17,4 @@
                  height="50">
         </noscript>
     </a>
-
-    {# TODO: Re-add this block when the content is cleared for release,
-             and an Español link exists. #}
-    {#
-    <div class="header_misc">
-        Contact us: <a class="header_misc_tel" href="tel:8554112372">(855) 411-2372</a>
-        <a class="header_misc_es">Español</a>
-    </div>
-    #}
-
 </header>
